--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="img-container">
       <div class="container">
         <div class="card-img">
-          <img src="/images/illustration-hero.svg" />
+          <img src="images/illustration-hero.svg" />
         </div>
 
         <div class="card">
@@ -28,7 +28,7 @@
             any device anywhere you like!
           </p>
           <div class="plan">
-            <img src="/images/icon-music.svg" alt="" />
+            <img src="images/icon-music.svg" alt="" />
             <p>
               <strong> Annual Plan </strong>
               <b> $59.99/year </b>
